--- a/sample/icon-fonts.html
+++ b/sample/icon-fonts.html
@@ -225,7 +225,7 @@
 
                 <h1>Icon Font Library</h1>
 
-                <p>The CaGov icon font includes <strong>500 icons</strong> you can use in your site. Four different
+                <p>The CaGov icon font includes over <strong>500 icons</strong> you can use in your site. Four different
                     formats of the font
                     are included for compatibility with all popular browsers. You may need to add a mime map to your
                     webserver for the WOFF font. To determine if your webserver needs it, upload the /fonts/CaGov.woff
@@ -2127,6 +2127,11 @@
                         <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-pdf"></span><span class="mls">
                                 ca-gov-icon-pdf</span></div>
                         <p class="icon-value">e614</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-pdf-text"></span><span class="mls">
+                                ca-gov-icon-pdf-text</span></div>
+                        <p class="icon-value">ea20</p>
                     </div>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-pencil"></span><span class="mls">
