updated timeline component

--- a/sample/modal.html
+++ b/sample/modal.html
@@ -82,8 +82,9 @@ Based on Twitter Bootstrap
                 <pre
                     class="  language-markup"><code class="language-markup"><button type="button" class="btn btn-default" data-bs-toggle="modal" data-bs-target="#modal">Show Modal</button></code></pre>
 
-                <p>Notice the button element has two custom data attributes: <code>data-toggle</code> and
-                    <code>data-target</code>. The toggle tells Bootstrap what to do and the target tells Bootstrap which
+                <p>Notice the button element has two custom data attributes: <code>data-bs-toggle</code> and
+                    <code>data-bs-target</code>. The toggle tells Bootstrap what to do and the target tells Bootstrap
+                    which
                     element is going to open. So, whenever a link button that is clicked, a modal with an ID of
                     <code>#modal</code> will appear.
                 </p>
