--- a/sample/modules/socialsharer.html
+++ b/sample/modules/socialsharer.html
@@ -1,6 +1,6 @@
 <div class="socialsharer-container">
 	<a class="ca-gov-icon-share-facebook" title="Share via Facebook"></a>
 	<a class="ca-gov-icon-share-twitter" title="Share via Twitter"></a>
-	<a class="ca-gov-icon-share-googleplus" title="Share via Google+"></a>
+	<a class="ca-gov-icon-share-Instagram" title="Share via Instagram"></a>
 	<a class="ca-gov-icon-share-email" title="Share via email"></a>
 </div>
