--- a/sample/modules/timeline.html
+++ b/sample/modules/timeline.html
@@ -11,13 +11,13 @@
             <li class="col-md-12">
                 <div class="row">
                     <!-- Timeline Date -->
-                    <div class="col-md-3 align-self-center text-md-right p-r-md">
+                    <div class="col-md-3 align-self-center text-md-end p-r-md">
                         <h4 class="h5 m-b-0">Project Manager</h4>
                         <h5 class="h6 m-t-sm">2016 - Current</h5>
                     </div>
                     <!-- End Timeline Date -->
                     <!-- Timeline Content -->
-                    <div class="col-md-9 align-self-center p-l-md brd-md-left brd-gray-light">
+                    <div class="col-md-9 align-self-center pos-rel p-l-md brd-md-left brd-gray-light">
                         <!-- Timeline Dot -->
                         <div class="timeline-dot d-none d-md-block">
                             <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
@@ -26,7 +26,8 @@
 
                         <article>
                             <h3 class="h4 m-b-0">State of California</h3>
-                            <p>Finally! Johne Doe got his dream job! He can work in the State now for the rest of his life.</p>
+                            <p>Finally! Johne Doe got his dream job! He can work in the State now for the rest of his
+                                life.</p>
                         </article>
                     </div>
                     <!-- End Timeline Content -->
@@ -35,13 +36,13 @@
             <li class="col-md-12">
                 <div class="row">
                     <!-- Timeline Date -->
-                    <div class="col-md-3 align-self-center text-md-right p-r-md">
+                    <div class="col-md-3 align-self-center text-md-end p-r-md">
                         <h4 class="h5 m-b-0">Full Stack Developer</h4>
                         <h5 class="h6 m-t-sm">2014 - 2016</h5>
                     </div>
                     <!-- End Timeline Date -->
                     <!-- Timeline Content -->
-                    <div class="col-md-9 align-self-center p-l-md brd-md-left brd-gray-light">
+                    <div class="col-md-9 align-self-center pos-rel p-l-md brd-md-left brd-gray-light">
                         <!-- Timeline Dot -->
                         <div class="timeline-dot d-none d-md-block">
                             <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
@@ -49,7 +50,8 @@
                         <!-- End Timeline Dot -->
                         <article>
                             <h3 class="h4 m-b-0">Google</h3>
-                            <p>Winter purslane courgette pumpkin quandong komatsuna fennel green bean cucumber. Pea cress potato sprouts wattle seed rutabaga.</p>
+                            <p>Winter purslane courgette pumpkin quandong komatsuna fennel green bean cucumber. Pea
+                                cress potato sprouts wattle seed rutabaga.</p>
                         </article>
                     </div>
                     <!-- End Timeline Content -->
@@ -58,13 +60,13 @@
             <li class="col-md-12">
                 <div class="row">
                     <!-- Timeline Date -->
-                    <div class="col-md-3 align-self-center text-md-right p-r-md">
+                    <div class="col-md-3 align-self-center text-md-end p-r-md">
                         <h4 class="h5 m-b-0">Frontend Developer</h4>
                         <h5 class="h6 m-t-sm">2012 - 2014</h5>
                     </div>
                     <!-- End Timeline Date -->
                     <!-- Timeline Content -->
-                    <div class="col-md-9 align-self-center p-l-md brd-md-left brd-gray-light">
+                    <div class="col-md-9 align-self-center pos-rel  p-l-md brd-md-left brd-gray-light">
                         <!-- Timeline Dot -->
                         <div class="timeline-dot d-none d-md-block">
                             <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
@@ -72,7 +74,8 @@
                         <!-- End Timeline Dot -->
                         <article>
                             <h3 class="h4 m-b-0">Amazon Inc.</h3>
-                            <p class="mb-0">Winter purslane courgette pumpkin quandong komatsuna fennel green bean cucumber. Pea cress potato sprouts wattle seed rutabaga.</p>
+                            <p class="mb-0">Winter purslane courgette pumpkin quandong komatsuna fennel green bean
+                                cucumber. Pea cress potato sprouts wattle seed rutabaga.</p>
                         </article>
                     </div>
                     <!-- End Timeline Content -->
@@ -81,13 +84,13 @@
             <li class="col-md-12">
                 <div class="row">
                     <!-- Timeline Date -->
-                    <div class="col-md-3 align-self-center text-md-right p-r-md">
+                    <div class="col-md-3 align-self-center text-md-end p-r-md">
                         <h4 class="h5 m-b-0">UX/UI Designer</h4>
                         <h5 class="h6 m-t-sm">2010 - 2012</h5>
                     </div>
                     <!-- End Timeline Date -->
                     <!-- Timeline Content -->
-                    <div class="col-md-9 align-self-center p-l-md brd-md-left brd-gray-light">
+                    <div class="col-md-9 align-self-center pos-rel p-l-md brd-md-left brd-gray-light">
                         <!-- Timeline Dot -->
                         <div class="timeline-dot d-none d-md-block">
                             <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
@@ -95,7 +98,8 @@
                         <!-- End Timeline Dot -->
                         <article>
                             <h3 class="h4 m-b-0">Apple Inc.</h3>
-                            <p class="mb-0">Winter purslane courgette pumpkin quandong komatsuna fennel green bean cucumber. Pea cress potato sprouts wattle seed rutabaga.</p>
+                            <p class="mb-0">Winter purslane courgette pumpkin quandong komatsuna fennel green bean
+                                cucumber. Pea cress potato sprouts wattle seed rutabaga.</p>
                         </article>
                     </div>
                     <!-- End Timeline Content -->
