--- a/sample/profile-banners.html
+++ b/sample/profile-banners.html
@@ -77,7 +77,7 @@ Based on Twitter Bootstrap
                         <div class="tab-group">
                             <ul id="sourceCode" class="nav nav-tabs" role="tablist">
                                 <li class="active"><a href="#html" role="tab" data-bs-toggle="tab"
-                                        aria-label="HTML Markup for Profile Banner">HTML Markup</a></li>
+                                        aria-label="HTML Markup for Profile Banner" class="active">HTML Markup</a></li>
                                 <li><a href="#microdata" role="tab" data-bs-toggle="tab"
                                         aria-label="Microdata for Profile Banner">Microdata</a></li>
                             </ul>
@@ -106,7 +106,7 @@ Based on Twitter Bootstrap
 
                         <div class="tab-group">
                             <ul id="sourceCode2" class="nav nav-tabs" role="tablist">
-                                <li class="active"><a href="#html2" role="tab" data-bs-toggle="tab"
+                                <li class="active"><a href="#html2" class="active" role="tab" data-bs-toggle="tab"
                                         aria-label="HTML Markup for Profile Banner Vertical Layout">HTML Markup</a></li>
                                 <li><a href="#microdata2" role="tab" data-bs-toggle="tab"
                                         aria-label="Microdata for Profile Banner Vertical Layout">Microdata</a></li>
