--- a/sample/index.html
+++ b/sample/index.html
@@ -93,6 +93,8 @@
                                     <li><a href="icon-fonts.html">Icon Font Library</a></li>
                                     <li><a href="modal.html">Modal <span
                                                 class="badge label-info  font-size-11">new</span></a></li>
+                                    <li><a href="number-counter.html">Number Counter</a></li>
+                                    <li><a href="parallax.html">Parallax</a></li>
                                     <li><a href="progress-bars.html">Progress Bars</a></li>
                                     <li><a href="progress-blocks.html">Progress Blocks</a></li>
                                     <li><a href="profile-banners.html">Profile Banners</a></li>
