--- a/sample/modules/number-counter.html
+++ b/sample/modules/number-counter.html
@@ -1,3 +1,3 @@
 <div class="stat-counter text-accent1">
-    <span class="number-counter" style="visibility: visible;">300</span>
+    <span class="scroll-counter" data-counter-time="4000" style="visibility: visible;">300</span>
 </div>
