--- a/sample/parallax.html
+++ b/sample/parallax.html
@@ -67,18 +67,19 @@ Based on Twitter Bootstrap
                 <h1>Parallax</h1>
                 <p>Parallax scrolling is a web site trend where the background content image is moved at a different
                     speed than the foreground content while scrolling. To implement parallax effect use div with
-                    <code>.parallax-bg</code> class and with <code>data-image-src</code> attribute that will point to
+                    <code>.parallax-bg</code> class and with <code>style="background-image: url()"</code> attribute that
+                    will point to
                     your backgound image. You can add your webpage content inside of the <code>.parallax-bg</code> div.
                 </p>
             </div>
 
 
-            <div class="parallax-bg" id="parallax-1" data-image-src="/images/background-primary.jpg">
+            <div class="parallax-bg" id="parallax-1" style="background-image: url(/images/background-primary.jpg)">
                 <div class="section-impact width-200 height-80 brd-gray-light brd-solid-1 relative-centered">
                     <h2 class="h3 text-center m-0 relative-centered">SCROLL DOWN</h2>
                 </div>
             </div>
-            <div class="parallax-bg height-300" id="parallax-2" data-image-src="/images/bg-open-data.jpg">
+            <div class="parallax-bg height-300" style="background-image: url(/images/bg-open-data.jpg)">
                 <div class="container p-y-lg">
                     <h2 class="text-center">Parallax Height</h2>
                     <p class="text-center">height can be specified by adding height class, such as
@@ -86,7 +87,7 @@ Based on Twitter Bootstrap
                     </p>
                 </div>
             </div>
-            <div class="parallax-bg height-300 bg-dark" id="parallax-3" data-image-src="/images/main-banner4.jpg">
+            <div class="parallax-bg height-300 bg-dark" style="background-image: url(/images/main-banner4.jpg)">
                 <div class="container p-y-lg">
                     <h2 class="text-center color-white">Light Text Color</h2>
                     <p class="text-center color-white">Make light text on dark backgrounds by adding class .color-white
@@ -101,18 +102,18 @@ Based on Twitter Bootstrap
             <div class="container p-b-lg">
                 <h2><label for="sample-panels">Source Code:</label></h2>
                 <div class="form-group">
-                    <textarea id="sample-panels" class="form-control" rows="17" cols="80"><div class="parallax-bg" id="parallax-1" data-image-src="/images/background-primary.jpg">
+                    <textarea id="sample-panels" class="form-control" rows="17" cols="80"><div class="parallax-bg" style="background-image: url(/images/background-primary.jpg)">
     <div class="section-impact width-200 height-80 brd-gray-light brd-solid-1 relative-centered">
         <h3 class="text-center m-0 relative-centered">SCROLL DOWN</h3>
     </div>
 </div>
-<div class="parallax-bg height-300" id="parallax-2" data-image-src="/images/bg-open-data.jpg">
+<div class="parallax-bg height-300" style="background-image: url(/images/bg-open-data.jpg)">
     <div class="container p-y-lg">
         <h2 class="text-center">Parallax Height</h2>
         <p class="text-center">height can be specified by adding height class, such as <code>.height-300</code></p>
     </div>
 </div>
-<div class="parallax-bg height-300 bg-dark" id="parallax-3" data-image-src="/images/main-banner4.jpg">
+<div class="parallax-bg height-300 bg-dark" style="background-image: url(images/main-banner4.jpg)">
     <div class="container p-y-lg">
         <h2 class="text-center color-white">Light Text Color</h2>
         <p class="text-center color-white">Make light text on dark backgrounds by adding class .color-white</p>
