--- a/ssi/section-counter-pie-charts.html
+++ b/ssi/section-counter-pie-charts.html
@@ -3,7 +3,8 @@
         <div class="row text-center p-t-lg" id="show-on-scroll">
             <!-- Counter Pie Chart -->
             <div class="col-md-4 col-sm-6 m-b-lg">
-                <div class="m-b-md" id="circle1">
+                <div class="stat-counter text-accent9">
+                    <span class="scroll-counter" data-counter-time="3000">87</span><span class="unit">%</span>
                 </div>
 
                 <h2 class="h4">UI Design</h2>
@@ -12,7 +13,8 @@
             <!-- End Counter Pie Chart -->
             <!-- Counter Pie Chart -->
             <div class="col-md-4 col-sm-6 m-b-lg">
-                <div class="m-b-md" id="circle2">
+                <div class="stat-counter text-accent-s1">
+                    <span class="scroll-counter" data-counter-time="2000">74</span><span class="unit">%</span>
                 </div>
 
                 <h2 class="h4">Web Development</h2>
@@ -21,7 +23,8 @@
             <!-- End Counter Pie Chart -->
             <!-- Counter Pie Chart -->
             <div class="col-md-4 col-sm-6 m-b-lg">
-                <div class="m-b-md" id="circle3">
+                <div class="stat-counter text-accent-s2">
+                    <span class="scroll-counter" data-counter-time="4000">65</span><span class="unit">%</span>
                 </div>
 
                 <h2 class="h4">JavaScript</h2>
@@ -29,5 +32,5 @@
             </div>
             <!-- End Counter Pie Chart -->
         </div>
-     </div>
+    </div>
 </div>
