--- a/ssi/section-green-stats.html
+++ b/ssi/section-green-stats.html
@@ -5,7 +5,7 @@
                 <!-- Counter Module -->
                 <div class="col-md-3 col-sm-6 ">
                     <div class="stat-counter text-accent9">
-                        <span class="number-counter">180</span><span class="unit">+</span>
+                        <span class="scroll-counter" data-counter-time="4000">180</span><span class="unit">+</span>
                     </div>
                     <p class="text-center">Code Samples</p>
                 </div>
@@ -13,7 +13,7 @@
                 <!-- Counter Module -->
                 <div class="col-md-3 col-sm-6 ">
                     <div class="stat-counter text-accent-s1">
-                        <span class="number-counter">10</span>
+                        <span class="scroll-counter" data-counter-time="4000">10</span>
                     </div>
                     <p class="text-center">Color Schemes</p>
                 </div>
@@ -21,7 +21,7 @@
                 <!-- Counter Module -->
                 <div class="col-md-3 col-sm-6">
                     <div class="stat-counter text-accent-s2">
-                        <span class="number-counter">20</span><span class="unit">+</span>
+                        <span class="scroll-counter" data-counter-time="4000">20</span><span class="unit">+</span>
                     </div>
                     <p class="text-center">CDN Releases</p>
                 </div>
@@ -29,7 +29,7 @@
                 <!-- Counter Module -->
                 <div class="col-md-3 col-sm-6">
                     <div class="stat-counter text-accent-p1">
-                        <span class="number-counter">200</span><span class="unit">+</span>
+                        <span class="scroll-counter" data-counter-time="4000">200</span><span class="unit">+</span>
                     </div>
                     <p class="text-center">State Agencies using State Template</p>
                 </div>
