--- a/business-profile.html
+++ b/business-profile.html
@@ -157,7 +157,7 @@
             <!-- End Section -->
 
             <div class="section section-default">
-                <div class="container">
+                <div class="container p-b-lg">
                     <h2>Frequently Asked Questions</h2>
                     <!--#include virtual="/ssi/section-service-faq.html" -->
                 </div>
