--- a/sample/layout-contact.html
+++ b/sample/layout-contact.html
@@ -140,11 +140,29 @@
                                 8:00 am - 4:00pm
                             </span>
                         </div>
-                        <div class="col-sm-6">
-                            <div class="embed-responsive embed-responsive-4by3">
-                                <iframe class="embed-responsive-item"
-                                    src="https://maps.google.com/maps?q=10860%20Gold%20Center%20Drive%20Rancho%20Cordova%2C%20CA%2095670&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                                    title="Our address on the map"></iframe>
+                        <div class="col-sm-6 p-t-lg">
+                            <div class="mapouter">
+                                <div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas"
+                                        src="https://maps.google.com/maps?q=10860%20Gold%20Center%20Dr,%20Rancho%20Cordova,%20CA%2095670&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                                        frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                                        href="https://fmovies-online.net">fmovies</a><br>
+                                    <style>
+                                        .mapouter {
+                                            position: relative;
+                                            text-align: right;
+                                            height: 500px;
+                                            width: 600px;
+                                        }
+                                    </style><a href="https://www.embedgooglemap.net">how to add map to website</a>
+                                    <style>
+                                        .gmap_canvas {
+                                            overflow: hidden;
+                                            background: none !important;
+                                            height: 500px;
+                                            width: 600px;
+                                        }
+                                    </style>
+                                </div>
                             </div>
                         </div>
                     </div>
