--- a/sample/parallax.html
+++ b/sample/parallax.html
@@ -74,7 +74,7 @@ Based on Twitter Bootstrap
             </div>
 
 
-            <div class="parallax-bg" id="parallax-1" style="background-image: url(/images/background-primary.jpg)">
+            <div class="parallax-bg" style="background-image: url(/images/background-primary.jpg)">
                 <div class="section-impact width-200 height-80 brd-gray-light brd-solid-1 relative-centered">
                     <h2 class="h3 text-center m-0 relative-centered">SCROLL DOWN</h2>
                 </div>
