--- a/sample/typography.html
+++ b/sample/typography.html
@@ -72,12 +72,14 @@
                     Source Sans Pro, which is designed for legibility and can beautifully adapt to a variety
                     of visual styles.
                 </p>
+
+
                 <hr />
                 <h2>Typeface</h2>
 
 
                 <div class="row">
-                    <div class="half">
+                    <div class="col-md-6 p-r-lg">
                         <h3 class="h4">Source Sans Pro</h3>
                         <p>
                             Source Sans Pro is an open-source sans serif typeface created for legibility in UI design.
@@ -95,7 +97,7 @@
                             Romanization of Chinese, and Navajo.
                         </p>
                     </div>
-                    <div class="half">
+                    <div class="col-md-6">
                         <span class="text-huge">Aa</span>
                         <div>
                             <p class="text-tiny">A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</p>
@@ -109,7 +111,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="half">
+                    <div class="col-md-6 p-r-lg">
                         <h3 class="h4">Asap Condensed</h3>
                         <p>
                             Asap Condensed is an open-source sans serif typeface that in this template is used in page
@@ -126,7 +128,7 @@
                             styles on-the-go without reflowing a text body.
                         </p>
                     </div>
-                    <div class="half">
+                    <div class="col-md-6">
                         <span class="text-huge heading">Aa</span>
                         <div>
                             <p class="text-tiny heading">A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</p>
@@ -142,84 +144,84 @@
                 <hr />
                 <h2>Web Hierarchy</h2>
                 <div class="row">
-                    <div class="half p-l-lg">
+                    <div class="col-md-6 p-l-lg">
                         <span class="h1">Heading 1</span>
                     </div>
-                    <div class="half">
+                    <div class="col-md-6">
                         <span class="monospace font-size-70x">
                             font-family: 'Asap Condensed'<br />
                             font-weight: 500<br />
-                            font-size: 2.4rem (~38px)<br />
+                            font-size: calc(2.4rem + 0.5vw);<br />
                             line-height: 1.5
                         </span>
                     </div>
                 </div>
 
-                <div class="group m-t-lg">
-                    <div class="half p-l-lg">
+                <div class="row m-t-lg">
+                    <div class="col-md-6 p-l-lg">
                         <span class="h2">Heading 2</span>
                     </div>
-                    <div class="half">
+                    <div class="col-md-6">
                         <span class="monospace font-size-70x">
                             font-family: 'Asap Condensed'<br />
                             font-weight: 500<br />
-                            font-size: 1.94rem (~31px)<br />
+                            font-size: calc(1.94rem + 0.5vw);<br />
                             line-height: 1.5
                         </span>
                     </div>
                 </div>
 
-                <div class="group m-t-lg">
-                    <div class="half p-l-lg">
+                <div class="row m-t-lg">
+                    <div class="col-md-6 p-l-lg">
                         <span class="h3">Heading 3</span>
                     </div>
-                    <div class="half">
+                    <div class="col-md-6">
                         <span class="monospace font-size-70x">
                             font-family: 'Asap Condensed'<br />
                             font-weight: 500<br />
-                            font-size: 1.54rem (~25px)<br />
+                            font-size: calc(1.54rem + 0.5vw)<br />
                             line-height: 1.5
                         </span>
                     </div>
                 </div>
 
-                <div class="group m-t-lg">
-                    <div class="half p-l-lg">
+                <div class="row m-t-lg">
+                    <div class="col-md-6 p-l-lg">
                         <span class="h4">Heading 4</span>
                     </div>
-                    <div class="half">
+                    <div class="col-md-6">
                         <span class="monospace font-size-70x">
                             font-family: 'Asap Condensed'<br />
                             font-weight: 500<br />
-                            font-size: 1.25rem (~20px)<br />
+                            font-size: calc(1.25rem + 0.5vw)<br />
                             line-height: 1.5
                         </span>
                     </div>
                 </div>
 
-                <div class="group m-t-lg">
-                    <div class="half p-l-lg">
+                <div class="row m-t-lg">
+                    <div class="col-md-6 p-l-lg">
                         <span class="h5">Heading 5</span>
                     </div>
-                    <div class="half">
+                    <div class="col-md-6">
                         <span class="monospace font-size-70x">
                             font-family: 'Asap Condensed'<br />
                             font-weight: 500<br />
-                            font-size: 1rem (~16px)<br />
+                            font-size: calc(1rem + 0.5vw);<br />
                             line-height: 1.5
                         </span>
                     </div>
                 </div>
 
-                <div class="group m-t-lg">
-                    <div class="half p-l-lg">
+                <div class="row m-t-lg">
+                    <div class="col-md-6 p-l-lg">
                         <span class="h6">Heading 6</span>
                     </div>
-                    <div class="half">
+                    <div class="col-md-6">
                         <span class="monospace font-size-70x">
                             font-family: 'Asap Condensed'<br />
                             font-weight: 500<br />
-                            font-size: 0.8rem (~14px)<br />
+                            font-size: calc(0.8rem + 0.5vw);<br />
                             line-height: 1.5
                         </span>
                     </div>
@@ -229,7 +231,7 @@
                 <p>To apply web font into a webpage following code needs to be copied into the &lt;head&gt; section of
                     the HTML document:</p>
 
-                <pre><span class="text-accent-p2">&lt;link</span> <span class="text-info">href=</span><span class="text-accent7">'https://fonts.googleapis.com/css?family=Asap+Condensed:400,600|Source+Sans+Pro:400,700'</span> <span class="text-info">rel=</span><span class="text-accent7">'stylesheet'</span> <span class="text-info">type=</span><span class="text-accent7">'text/css'</span><span class="text-accent-p2">&gt;</span>
+                <pre class="small"><span class="text-accent-p2">&lt;link</span> <span class="text-info">href=</span><span class="text-accent7">'https://fonts.googleapis.com/css?family=Asap+Condensed:400,600|Source+Sans+Pro:400,700'</span> <span class="text-info">rel=</span><span class="text-accent7">'stylesheet'</span> <span class="text-info">type=</span><span class="text-accent7">'text/css'</span><span class="text-accent-p2">&gt;</span>
 </pre>
                 <p class="m-t-lg">Also, use the following CSS rules to specify web font familiy:</p>
 
@@ -238,20 +240,33 @@
                 <br /><br />
 
                 <hr />
-                <h2>Pharagraph text sizes</h2>
-
-                <h3>Lead paragraph (1.25rem) that is using class <code>.lead</code></h3>
+                <h2>Responsive pharagraph text sizes</h2>
+                <p>Body text and headings font sizes are automatically calculated into appropriate values based on the
+                    dimensions of the browser viewport. For the body text we are using <code>0.3vw </code>value to
+                    calculate font-size responsiveness relative to the viewport width (0.5vw is 1/100th the width of the
+                    viewport). Headings are using <code>0.5vw</code> value that will make them bigger on the big screens
+                    but not too big on the smaller screens.
+                </p>
+                <h3>Lead paragraph
+                    that
+                    is using class <code>.lead</code>
+                    <pre class="small">font-size: calc(1.25rem + 0.3vw);</pre>
+                </h3>
                 <p class="lead">Apparently we had reached a great height in the atmosphere, for the sky was a dead
                     black, and the stars had ceased to twinkle. By the same illusion which lifts the horizon of the sea
                     to the level of the spectator on a hillside.</p>
 
-                <h3>Regular paragraph (1.1rem)</h3>
+                <h3>Regular paragraph
+                    <pre class="small">font-size: calc(1.125rem + 0.3vw);</pre>
+                </h3>
                 <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the
                     stars had ceased to twinkle. By the same illusion which lifts the horizon of the sea to the level of
                     the spectator on a hillside.</p>
 
-                <h3>Small text paragraph (0.825rem) that is using class <code>.font-size-sm</code></h3>
-                <p class="font-size-sm">Apparently we had reached a great height in the atmosphere, for the sky was a
+                <h3>Small text paragraph that is using class <code>.small</code>
+                    <pre class="small">font-size: calc(1rem + 0.3vw);</pre>
+                </h3>
+                <p class="small">Apparently we had reached a great height in the atmosphere, for the sky was a
                     dead black, and the stars had ceased to twinkle. By the same illusion which lifts the horizon of the
                     sea to the level of the spectator on a hillside.</p>
 
