Adjusted some of the components to responsive font sizing

--- a/sample/layout-services.html
+++ b/sample/layout-services.html
@@ -120,7 +120,7 @@
                                 <p class="m-b">Curabitur ut augue at mi eleifend lobortis. Ut tincidunt lacinia nisi
                                     pharetra.</p>
 
-                                <a class="text-uppercase font-size-sm" href="#">Read More <span class="sr-only">about
+                                <a class="text-uppercase small" href="#">Read More <span class="sr-only">about
                                         Elegant Design</span></a>
                             </div>
                             <!-- End Icon Blocks -->
@@ -134,7 +134,7 @@
                                 <h3 class="h4 m-y-sm">ADA Compliant</h3>
                                 <p class="m-b">Curabitur ut augue at mi eleifend lobortis. Ut tincidunt lacinia nisi
                                     pharetra.</p>
-                                <a class="text-uppercase font-size-sm" href="#">Read More <span class="sr-only">about
+                                <a class="text-uppercase small" href="#">Read More <span class="sr-only">about
                                         ADA Compliant</span></a>
                             </div>
                             <!-- End Icon Blocks -->
@@ -148,7 +148,7 @@
                                 <h3 class="h4 m-y-sm">Fully Responsive</h3>
                                 <p class="m-b">Curabitur ut augue at mi eleifend lobortis. Ut tincidunt lacinia nisi
                                     pharetra.</p>
-                                <a class="text-uppercase font-size-sm" href="#">Read More <span class="sr-only">about
+                                <a class="text-uppercase small" href="#">Read More <span class="sr-only">about
                                         Fully Responsiven</span></a>
                             </div>
                             <!-- End Icon Blocks -->
