--- a/sample/modules/news-block.html
+++ b/sample/modules/news-block.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="third m-b-md">
+    <div class="col-md-4 m-b-md">
         <!-- Article -->
         <article class="shadow">
             <figure class="pos-rel m-b-0">
@@ -11,7 +11,7 @@
             </figure>
 
             <div class="p-a">
-                <ul class="list-inline font-size-sm m-y-0">
+                <ul class="list-inline small m-y-0">
                     <li class="list-inline-item">
                         <span class="color-gray">By:</span>
                         <a class="color-gray-dark color-primary-hover" href="#">Alex</a>
@@ -49,7 +49,7 @@
         <!-- End Article -->
     </div>
 
-    <div class="third m-b-md">
+    <div class="col-md-4 m-b-md">
         <!-- Article -->
         <article class="shadow">
             <figure class="pos-rel m-b-0">
@@ -61,7 +61,7 @@
             </figure>
 
             <div class="p-a">
-                <ul class="list-inline font-size-sm m-y-0">
+                <ul class="list-inline small m-y-0">
                     <li class="list-inline-item">
                         <span class="color-gray">By:</span>
                         <a class="color-gray-dark color-primary-hover" href="#">Kathy</a>
@@ -99,7 +99,7 @@
         <!-- End Article -->
     </div>
 
-    <div class="third m-b-md">
+    <div class="col-md-4 m-b-md">
         <!-- Article -->
         <article class="shadow">
             <figure class="pos-rel m-b-0">
@@ -111,7 +111,7 @@
             </figure>
 
             <div class="p-a">
-                <ul class="list-inline font-size-sm m-y-0">
+                <ul class="list-inline small m-y-0">
                     <li class="list-inline-item">
                         <span class="color-gray">By:</span>
                         <a class="color-gray-dark color-primary-hover" href="#">John</a>
