--- a/sample/modules/news-image.html
+++ b/sample/modules/news-image.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="third m-b-md">
+    <div class="col-md-4 m-b-md">
         <!-- Article -->
         <article class="block-hover section-standout">
             <figure class="bg-overlay">
@@ -21,7 +21,7 @@
         </article>
         <!-- End Article -->
     </div>
-    <div class="third m-b-md">
+    <div class="col-md-4 m-b-md">
         <!-- Article -->
         <article class="block-hover section-standout">
             <figure class="bg-overlay">
@@ -43,7 +43,7 @@
         </article>
         <!-- End Article -->
     </div>
-    <div class="third m-b-md">
+    <div class="col-md-4 m-b-md">
         <!-- Article -->
         <article class="block-hover section-standout">
             <figure class="bg-overlay">
