--- a/sample/modules/profile-banners-schema.html
+++ b/sample/modules/profile-banners-schema.html
@@ -11,11 +11,11 @@
             <!-- Figure Info -->
             <h3 class="m-0 h4" itemprop="name">Official Name</h3>
             <div class="d-block">
-                <span class="font-size-13" itemprop="jobTitle">Government Entity Title</span>
+                <span class="small" itemprop="jobTitle">Government Entity Title</span>
 
             </div>
             <hr class="m-t-sm m-b-0" />
-            <a href="" class="font-size-12" itemprop="url">Website</a>
+            <a href="" class="font-size-16" itemprop="url">Website</a>
             <!-- End Figure Info -->
         </div>
     </div>
@@ -33,8 +33,8 @@
                 <h3 class="m-0 h4" itemprop="name">Official Name</h3>
                 <em class="d-block" itemprop="jobTitle">Government Entity Title</em>
             </div>
-            <em class="d-block font-size-13" itemprop="url"><a href="#">Website</a></em>
-            <em class="d-block font-size-12" itemprop="telephone">Phone Number</em>
+            <em class="d-block font-size-16" itemprop="url"><a href="#">Website</a></em>
+            <em class="d-block font-size-15" itemprop="telephone">Phone Number</em>
         </div>
         <!-- End Figure Info -->
     </div>
