--- a/sample/modules/profile-banners-vertical.html
+++ b/sample/modules/profile-banners-vertical.html
@@ -6,9 +6,9 @@
             <!-- Figure Image -->
             <!-- Figure Info -->
             <h3 class="m-b-0 m-t h4">Official Name</h3>
-            <span class="font-size-13">Government Entity Title</span>
+            <span class="small">Government Entity Title</span>
             <hr class="m-t-sm m-b-0" />
-            <a href="#" class="font-size-12">Website</a>
+            <a href="#" class="font-size-16">Website</a>
             <!-- End Figure Info -->
         </figure>
     </div>
@@ -22,10 +22,10 @@
 
             <div class="m-b-sm">
                 <h3 class="m-b-0 m-t h4">Official Name</h3>
-                <em class="d-block">Government Entity Title</em>
+                <em class="d-block small">Government Entity Title</em>
             </div>
-            <em class="d-block font-size-13">Website</em>
-            <em class="d-block font-size-12">Phone Number</em>
+            <em class="d-block font-size-16">Website</em>
+            <em class="d-block font-size-15">Phone Number</em>
             <!-- End Figure Info -->
         </figure>
     </div>
