--- a/sample/modules/profile-banners.html
+++ b/sample/modules/profile-banners.html
@@ -10,11 +10,11 @@
             <!-- Figure Info -->
             <h3 class="h4 m-0">Official Name</h3>
             <div class="d-block">
-                <span class="font-size-13">Government Entity Title</span>
+                <span class="small">Government Entity Title</span>
 
             </div>
-            <hr class="m-t-sm m-b-0" />
-            <a href="" class="font-size-12" aria-label="Link to Official's Website">Website</a>
+            <hr class=" m-t-sm m-b-0" />
+            <a href="" class="font-size-16" aria-label="Link to Official's Website">Website</a>
             <!-- End Figure Info -->
         </div>
     </div>
@@ -31,10 +31,10 @@
         <div class="d-block">
             <div class="m-b-sm">
                 <h3 class="h4 m-0">Official Name</h3>
-                <em class="d-block">Government Entity Title</em>
+                <em class="d-block small">Government Entity Title</em>
             </div>
-            <em class="d-block font-size-13">Website</em>
-            <em class="d-block font-size-12">Phone Number</em>
+            <em class="d-block font-size-16">Website</em>
+            <em class="d-block font-size-15">Phone Number</em>
         </div>
         <!-- End Figure Info -->
     </div>
