--- a/ssi/news.html
+++ b/ssi/news.html
@@ -12,7 +12,7 @@
                 </figure>
 
                 <div class="p-a">
-                    <ul class="list-inline font-size-sm m-y-0">
+                    <ul class="list-inline small m-y-0">
                         <li class="list-inline-item">
                             <span class="color-gray">By:</span>
                             <a class="color-gray-dark color-primary-hover" href="#">Alex</a>
@@ -64,7 +64,7 @@
                 </figure>
 
                 <div class="p-a">
-                    <ul class="list-inline font-size-sm m-y-0">
+                    <ul class="list-inline small m-y-0">
                         <li class="list-inline-item">
                             <span class="color-gray">By:</span>
                             <a class="color-gray-dark color-primary-hover" href="#">Kathy</a>
@@ -116,7 +116,7 @@
                 </figure>
 
                 <div class="p-a">
-                    <ul class="list-inline font-size-sm m-y-0">
+                    <ul class="list-inline small m-y-0">
                         <li class="list-inline-item">
                             <span class="color-gray">By:</span>
                             <a class="color-gray-dark color-primary-hover" href="#">John</a>
