--- a/sample/modules/blurb-rounded-corners-icon.html
+++ b/sample/modules/blurb-rounded-corners-icon.html
@@ -9,7 +9,7 @@
             <h3 class="h4 m-y-sm">Elegant Design</h3>
             <p class="m-b">Curabitur ut augue at mi eleifend lobortis. Ut tincidunt lacinia nisi pharetra.</p>
 
-            <a class="text-uppercase font-size-sm" href="#">Read More <span class="sr-only">about Elegant Design</span></a>
+            <a class="text-uppercase small" href="#">Read More <span class="sr-only">about Elegant Design</span></a>
         </div>
         <!-- End Icon Blocks -->
     </div>
@@ -21,7 +21,8 @@
             </span>
             <h3 class="h4 m-y-sm">ADA Compliant</h3>
             <p class="m-b">Curabitur ut augue at mi eleifend lobortis. Ut tincidunt lacinia nisi pharetra.</p>
-            <a class="text-uppercase font-size-sm" href="#">Read More <span class="sr-only">about ADA Compliant</span></a>
+            <a class="text-uppercase small" href="#">Read More <span class="sr-only">about ADA
+                    Compliant</span></a>
         </div>
         <!-- End Icon Blocks -->
     </div>
@@ -33,7 +34,8 @@
             </span>
             <h3 class="h4 m-y-sm">Fully Responsive</h3>
             <p class="m-b">Curabitur ut augue at mi eleifend lobortis. Ut tincidunt lacinia nisi pharetra.</p>
-            <a class="text-uppercase font-size-sm" href="#">Read More <span class="sr-only">about Fully Responsiven</span></a>
+            <a class="text-uppercase small" href="#">Read More <span class="sr-only">about Fully
+                    Responsiven</span></a>
         </div>
         <!-- End Icon Blocks -->
     </div>
