--- a/ssi/settings-bar.html
+++ b/ssi/settings-bar.html
@@ -13,11 +13,11 @@
             <div class="btn-group"><button type="button" class="btn btn-standout resetTextSize">Reset</button></div>
             <div class="btn-group"><button type="button" class="btn btn-standout increaseTextSize"><span
                         class="hidden-xs">Increase Font Size</span><span class="visible-xs">Font <span
-                            class="sr-only">Increase</span><span class="ca-gov-icon-plus-line font-size-sm"
+                            class="sr-only">Increase</span><span class="ca-gov-icon-plus-line small"
                             aria-hidden="true"></span></span></button></div>
             <div class="btn-group"><button type="button" class="btn btn-standout decreaseTextSize"><span
                         class="hidden-xs">Decrease Font Size</span><span class="visible-xs">Font <span
-                            class="sr-only">Decrease</span><span class="ca-gov-icon-minus-line font-size-sm"
+                            class="sr-only">Decrease</span><span class="ca-gov-icon-minus-line small"
                             aria-hidden="true"></span></span></button></div>
             <div class="btn-group"><button type="button" class="btn btn-standout dyslexicFont">Dyslexic Font</button>
             </div>
