updated icon-fonts, added github icon and updated pdf-text icon

--- a/sample/icon-fonts.html
+++ b/sample/icon-fonts.html
@@ -1533,6 +1533,11 @@
                         <p class="icon-value">e900</p>
                     </div>
                     <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-github"></span><span class="mls">
+                                ca-gov-icon-github</span></div>
+                        <p class="icon-value">ea21</p>
+                    </div>
+                    <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-glass"></span><span class="mls">
                                 ca-gov-icon-glass</span></div>
                         <p class="icon-value">e987</p>
