Removed google font instructions from typography page

--- a/sample/typography.html
+++ b/sample/typography.html
@@ -228,16 +228,11 @@
                 </div>
                 <hr />
                 <h2>Applying Web Font Into a Website</h2>
-                <p>To apply web font into a webpage following code needs to be copied into the &lt;head&gt; section of
-                    the HTML document:</p>
 
-                <pre class="small"><span class="text-accent-p2">&lt;link</span> <span class="text-info">href=</span><span class="text-accent7">'https://fonts.googleapis.com/css?family=Asap+Condensed:400,600|Source+Sans+Pro:400,700'</span> <span class="text-info">rel=</span><span class="text-accent7">'stylesheet'</span> <span class="text-info">type=</span><span class="text-accent7">'text/css'</span><span class="text-accent-p2">&gt;</span>
-</pre>
-                <p class="m-t-lg">Also, use the following CSS rules to specify web font familiy:</p>
+                <p class="m-t-lg">Use the following CSS rules to specify web font familiy:</p>
 
                 <pre><span class="text-accent-p2">font-family:</span><span class="text-info">'Source Sans Pro', sans-serif;</span><br /><span class="text-accent-p2">font-family:</span><span class="text-info">'Asap Condensed', sans-serif;</span></pre>
 
-                <br /><br />
 
                 <hr />
                 <h2>Responsive pharagraph text sizes</h2>
