--- a/ssi/global-footer.html
+++ b/ssi/global-footer.html
@@ -1,5 +1,8 @@
 <!-- Global Footer -->
 <footer id="footer" class="global-footer">
+    <button class="return-top"><span class="sr-only">Back to top</span></button>
+    <cagov-back-to-top data-hide-after="7000" data-label="Back to top">
+    </cagov-back-to-top>
     <div class="container">
         <div class="row">
             <div class="three-quarters">
@@ -8,14 +11,17 @@
                     <li><a href="/use.html">Conditions of Use</a></li>
                     <li><a href="/privacy.html">Privacy Policy</a></li>
                     <li><a href="/accessibility.html">Accessibility</a></li>
-                    <li><a href="/images/WebAccessibilityCert-beta.template.webstandards.ca.gov.pdf">Accessibility Certification</a></li>
+                    <li><a href="/images/WebAccessibilityCert-beta.template.webstandards.ca.gov.pdf">Accessibility
+                            Certification</a></li>
                     <li><a href="/contact.html">Contact Us</a></li>
                 </ul>
             </div>
             <div class="quarter text-right">
                 <ul class="socialsharer-container">
-                    <li><a href="https://www.flickr.com/groups/californiagovernment"><span class="ca-gov-icon-flickr" aria-hidden="true"></span><span class="sr-only">Flickr</span></a></li>
-                    <li><a href="https://www.pinterest.com/cagovernment/"><span class="ca-gov-icon-pinterest" aria-hidden="true"></span><span class="sr-only">Pinterest</span></a></li>
+                    <li><a href="https://www.flickr.com/groups/californiagovernment"><span class="ca-gov-icon-flickr"
+                                aria-hidden="true"></span><span class="sr-only">Flickr</span></a></li>
+                    <li><a href="https://www.pinterest.com/cagovernment/"><span class="ca-gov-icon-pinterest"
+                                aria-hidden="true"></span><span class="sr-only">Pinterest</span></a></li>
                 </ul>
             </div>
         </div>
@@ -25,7 +31,8 @@
     <!-- Copyright Statement -->
     <div class="copyright">
         <div class="container">
-            Copyright &copy; <script>document.write(new Date().getFullYear())</script> State of California
+            Copyright &copy;
+            <script>document.write(new Date().getFullYear())</script> State of California
         </div>
     </div>
 </footer>
