--- a/sample/modules/timeline.html
+++ b/sample/modules/timeline.html
@@ -9,11 +9,36 @@
     <div class="card-block">
         <ul class="row list-unstyled">
             <li class="col-md-12">
-                <div class="row">
+                <article class="row">
                     <!-- Timeline Date -->
-                    <div class="col-md-3 align-self-center text-md-end p-r-md">
-                        <h4 class="h5 m-b-0">Project Manager</h4>
-                        <h5 class="h6 m-t-sm">2016 - Current</h5>
+                    <div class="col-md-3 text-md-end p-r-md">
+                        <div class="h5 m-t m-b-0">Project Manager</div>
+                        <div class="h6 m-y-0">2016 - Current</div>
+                    </div>
+                    <!-- End Timeline Date -->
+                    <!-- Timeline Content -->
+                    <div class="col-md-9 pos-rel p-l-md brd-md-left brd-gray-light">
+                        <!-- Timeline Dot -->
+                        <div class="timeline-dot d-none d-md-block">
+                            <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
+                        </div>
+                        <!-- End Timeline Dot -->
+
+                        <div class="h4 m-t m-b-0">State of California</div>
+                        <p class="m-b-md">Finally! Johne Doe got his dream job! He can work in the State now for the
+                            rest of his
+                            life.</p>
+
+                    </div>
+                    <!-- End Timeline Content -->
+                </article>
+            </li>
+            <li class="col-md-12">
+                <article class="row">
+                    <!-- Timeline Date -->
+                    <div class="col-md-3  text-md-end p-r-md">
+                        <div class="h5 m-t m-b-0">Full Stack Developer</div>
+                        <div class="h6 m-y-0">2014 - 2016</div>
                     </div>
                     <!-- End Timeline Date -->
                     <!-- Timeline Content -->
@@ -24,45 +49,21 @@
                         </div>
                         <!-- End Timeline Dot -->
 
-                        <article>
-                            <h3 class="h4 m-b-0">State of California</h3>
-                            <p>Finally! Johne Doe got his dream job! He can work in the State now for the rest of his
-                                life.</p>
-                        </article>
+                        <h3 class="h4 m-t m-b-0">Google</h3>
+                        <p class="m-b-md">Winter purslane courgette pumpkin quandong komatsuna fennel green bean
+                            cucumber. Pea
+                            cress potato sprouts wattle seed rutabaga.</p>
+
                     </div>
                     <!-- End Timeline Content -->
-                </div>
+                </article>
             </li>
             <li class="col-md-12">
-                <div class="row">
+                <article class="row">
                     <!-- Timeline Date -->
-                    <div class="col-md-3 align-self-center text-md-end p-r-md">
-                        <h4 class="h5 m-b-0">Full Stack Developer</h4>
-                        <h5 class="h6 m-t-sm">2014 - 2016</h5>
-                    </div>
-                    <!-- End Timeline Date -->
-                    <!-- Timeline Content -->
-                    <div class="col-md-9 align-self-center pos-rel p-l-md brd-md-left brd-gray-light">
-                        <!-- Timeline Dot -->
-                        <div class="timeline-dot d-none d-md-block">
-                            <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
-                        </div>
-                        <!-- End Timeline Dot -->
-                        <article>
-                            <h3 class="h4 m-b-0">Google</h3>
-                            <p>Winter purslane courgette pumpkin quandong komatsuna fennel green bean cucumber. Pea
-                                cress potato sprouts wattle seed rutabaga.</p>
-                        </article>
-                    </div>
-                    <!-- End Timeline Content -->
-                </div>
-            </li>
-            <li class="col-md-12">
-                <div class="row">
-                    <!-- Timeline Date -->
-                    <div class="col-md-3 align-self-center text-md-end p-r-md">
-                        <h4 class="h5 m-b-0">Frontend Developer</h4>
-                        <h5 class="h6 m-t-sm">2012 - 2014</h5>
+                    <div class="col-md-3 text-md-end p-r-md">
+                        <h4 class="h5 m-t m-b-0">Frontend Developer</h4>
+                        <h5 class="h6 m-y-0">2012 - 2014</h5>
                     </div>
                     <!-- End Timeline Date -->
                     <!-- Timeline Content -->
@@ -72,21 +73,21 @@
                             <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
                         </div>
                         <!-- End Timeline Dot -->
-                        <article>
-                            <h3 class="h4 m-b-0">Amazon Inc.</h3>
-                            <p class="mb-0">Winter purslane courgette pumpkin quandong komatsuna fennel green bean
-                                cucumber. Pea cress potato sprouts wattle seed rutabaga.</p>
-                        </article>
+
+                        <h3 class="h4 m-t m-b-0">Amazon Inc.</h3>
+                        <p class="m-b-md">Winter purslane courgette pumpkin quandong komatsuna fennel green bean
+                            cucumber. Pea cress potato sprouts wattle seed rutabaga.</p>
+
                     </div>
                     <!-- End Timeline Content -->
-                </div>
+                </article>
             </li>
             <li class="col-md-12">
-                <div class="row">
+                <article class="row">
                     <!-- Timeline Date -->
-                    <div class="col-md-3 align-self-center text-md-end p-r-md">
-                        <h4 class="h5 m-b-0">UX/UI Designer</h4>
-                        <h5 class="h6 m-t-sm">2010 - 2012</h5>
+                    <div class="col-md-3 text-md-end p-r-md">
+                        <div class="h5 m-t m-b-0">UX/UI Designer</div>
+                        <div class="h6 m-y-0">2010 - 2012</div>
                     </div>
                     <!-- End Timeline Date -->
                     <!-- Timeline Content -->
@@ -96,14 +97,13 @@
                             <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
                         </div>
                         <!-- End Timeline Dot -->
-                        <article>
-                            <h3 class="h4 m-b-0">Apple Inc.</h3>
-                            <p class="mb-0">Winter purslane courgette pumpkin quandong komatsuna fennel green bean
-                                cucumber. Pea cress potato sprouts wattle seed rutabaga.</p>
-                        </article>
+                        <div class="h4 m-t m-b-0">Apple Inc.</div>
+                        <p class="m-b-md">Winter purslane courgette pumpkin quandong komatsuna fennel green bean
+                            cucumber. Pea cress potato sprouts wattle seed rutabaga.</p>
+
                     </div>
                     <!-- End Timeline Content -->
-                </div>
+                </article>
             </li>
         </ul>
     </div>
