--- a/ssi/search.html
+++ b/ssi/search.html
@@ -14,7 +14,7 @@
 <!--Custom Google Search ID Script can be found inside of serp.html file -->
 <div class="container">
     <form id="Search" class="pos-rel" action="/serp.html">
-        <span class="sr-only">Custom Google Search</span>
+        <span class="sr-only" id="SearchInput">Custom Google Search</span>
         <input type="text" name="q" aria-labelledby="SearchInput" placeholder="Search this website"
             class="height-50 border-0 p-x-sm w-100 search-textfield" />
         <button type="submit" class="pos-abs gsc-search-button top-0 width-50 height-50 border-0 bg-transparent"><span
