Updated GA code in GA analytics files #189

--- a/ssi/analytics.html
+++ b/ssi/analytics.html
@@ -1,16 +1,14 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+<!-- update state department UA code in the line below before deployment -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-20973992-30"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag() { dataLayer.push(arguments); }
   gtag('js', new Date());
 
   //statewide GA property
-  gtag('config', 'UA-3419582-2');
-  //please update state department UA code in line below before deployment	
-  gtag('config', 'UA-xxxxxx-xx');
-  //un-comment line below and update UA code to add a third GA property
-  //gtag('config', 'UA-xxxxxx-xx');
+  gtag('config', 'UA-20973992-30');
+  //please update state department UA code in line below before deployment
 
   var getOutboundLink = function (url) {
     gtag('event', 'click', {
