Fixed broken link to Events page #203

--- a/sample/layouts.html
+++ b/sample/layouts.html
@@ -73,7 +73,7 @@
                             <li><a href="/sample/layout-about.html">About</a></li>
                             <li><a href="/business-profile.html">Agency profile</a></li>
                             <li><a href="/sample/layout-contact.html">Contact</a></li>
-                            <li><a href="/sample/layout-event.html">Events</a></li>
+                            <li><a href="/sample/layout-events.html">Events</a></li>
                             <li><a href="/sample/layout-faq.html">FAQ</a>
                             <li><a href="/general-landing.html">General Landing Page</a>
                             <li><a href="/">Homepage</a></li>
