Added page navigation sample page, styles, and modules #223

--- a/pages/sample/navsamples.html
+++ b/pages/sample/navsamples.html
@@ -23,7 +23,8 @@ permalink: "sample/navsamples.html"
                     Search</a></li>
             <li><a href="navigation-single.html">Single Level Navigation</a></li>
             <li><a href="navigation-dropdown.html">Dropdown Navigation</a></li>
-            <li><a href="navigation-sidebar.html">Side navigation menu</a></li>
+            <li><a href="page-navigation.html">Page navigation</a></li>
+            <li><a href="navigation-sidebar.html">Side navigation (accordion)</a></li>
             <li><a href="navigation-active.html">Setting the Active Navigation Item</a></li>
         </ul>
     </div>
