added components layout include #253

--- a/pages/sample/page-navigation.html
+++ b/pages/sample/page-navigation.html
@@ -1,6 +1,6 @@
 ﻿---
 title: Page navigation
-layout: page.njk
+layout: components.njk
 permalink: "sample/page-navigation.html"
 ---
 
@@ -12,8 +12,11 @@ permalink: "sample/page-navigation.html"
     </ol>
 </nav>
 
+
+
 <h1>Page navigation</h1>
-<p>Page navigation is a list of links to the current page sections or to other web pages. It is placed at the top of
+<p>Page navigation is a list of links to the current page sections or to other web pages. It is placed at the
+    top of
     the page on the left. Page navigation makes it easy to see what content is available.
 </p>
 <h2>List navigation</h2>
@@ -49,9 +52,11 @@ permalink: "sample/page-navigation.html"
 </style>
 
 <h2>"On this page" navigation</h2>
-<p>This type of navigation lists and links to the level 2 headings (H2) of a webpage. It is placed at the top of the
+<p>This type of navigation lists and links to the level 2 headings (H2) of a webpage. It is placed at the top of
+    the
     page on the
-    left. People can select a link to go directly to that section. The links are introduced by the text On this page by
+    left. People can select a link to go directly to that section. The links are introduced by the text On this
+    page by
     default. The page navigation does not show if there are zero or one H2’s on the page.</p>
 
 
