updated badge element, so it doesn't look like button #272

--- a/pages/sample/exam-list.html
+++ b/pages/sample/exam-list.html
@@ -22,7 +22,7 @@ permalink: "sample/exam-list.html"
  <code>.header</code>, <code>.body</code>, and <code>.footer</code>
 </p>
 
-<p><span class="badge label-info">Note:</span> Exam items have additional classes on sub
+<p><span class="badge label-primary">Note:</span> Exam items have additional classes on sub
  elements that may not be used in the current design, however they could be used in the
  future.</p>
 
