--- a/pages/sample/job-list.html
+++ b/pages/sample/job-list.html
@@ -32,7 +32,7 @@ permalink: "sample/job-list.html"
   <li><code>.location</code> - Single location</li>
  </ul>
 
- <p><span class="badge label-info">Note:</span> Job items have additional classes on sub elements
+ <p><span class="badge label-primary">Note:</span> Job items have additional classes on sub elements
   that may not be used in the current design, however they could be used in the future.</p>
 
  {% include "../../src/_includes/modules/schema-boilerplate.html" %}
