--- a/pages/structure.html
+++ b/pages/structure.html
@@ -63,7 +63,8 @@ using njk includes.
     <span class="text-accent-p2">&lt;/body&gt;</span>
 <span class="text-accent-p2">&lt;/html&gt;</span>
 </pre>
-<p><span class="badge label-info">Note:</span> Path to the includes will be relative to the directory of your page.</p>
+<p><span class="badge label-primary">Note:</span> Path to the includes will be relative to the directory of your page.
+</p>
 
 </pre>
 <h2>File and Folder Structure</h2>
