--- a/pages/sample/colorscheme-orangecounty.html
+++ b/pages/sample/colorscheme-orangecounty.html
@@ -90,7 +90,7 @@ colorscheme: "/css/colorscheme-orangecounty.css"
     </p>
 
     <p>
-     <span class="badge label-info">Note:</span> <span class="font-size-sm"> Before changing
+     <span class="badge label-primary">Note:</span> <span class="font-size-sm"> Before changing
       your colors make sure that your custom theme colors have sufficient color cotrast
       ratios.</span>
     </p>
