--- a/pages/sample/featured-search.html
+++ b/pages/sample/featured-search.html
@@ -31,7 +31,7 @@ search: Featured
      </p>
 
 
-     <p><span class="badge label-info">NOTE:</span> Featured search can be only used with
+     <p><span class="badge label-primary">NOTE:</span> Featured search can be only used with
       <code>navicons.njk</code>
       or
       <code>navicons-landing.njk</code> layouts, since <code>paga.njk</code>, <code>landing.njk</code> page
