--- a/pages/sample/profile-list.html
+++ b/pages/sample/profile-list.html
@@ -17,7 +17,7 @@ permalink: "sample/profile-list.html"
  widgets, the list item contains the following child elements. <code>.thumbnail</code>,
  <code>.header</code>, <code>.body</code>, and <code>.footer</code>
 </p>
-<p><span class="badge label-info">Note:</span> List items have additional classes on sub elements that
+<p><span class="badge label-primary">Note:</span> List items have additional classes on sub elements that
  are not being used in the current design, however they could be used in the future.</p>
 
 {% include "../../src/_includes/modules/schema-boilerplate.html" %}
